# MDAnalysisData

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CG_fiber.html  CHANGELOG.md  LICENSE  MANIFEST.in  PEG_1chain.html  README.md  adk_equilibrium.html  adk_transitions.html  contributing.html  credits.html  environment.yaml  genindex.html  helpers.html  ifabp_water.html  index.html  install.html  membrane_peptide.html  nhaa_equilibrium.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  usage.html  vesicles.html  yiip_equilibrium.html
.github/workflows/: deploy.yaml  deploy.yml  docs.yml  gh-ci.yml
MDAnalysisData/: CG_fiber.py  PEG_1chain.py  __init__.py  _version.py  adk_equilibrium.py  adk_transitions.py  base.py  datasets.py  ifabp_water.py  membrane_peptide.py  nhaa_equilibrium.py  vesicles.py  yiip_equilibrium.py
MDAnalysisData/descr/: CG_fiber.rst  PEG_1chain.rst  adk_equilibrium.rst  adk_transitions_DIMS.rst  adk_transitions_FRODA.rst  ifabp_water.rst  membrane_peptide.rst  nhaa_equilibrium.rst  vesicle_lib.rst  yiip_equilibrium.rst
MDAnalysisData/tests/: __init__.py  conftest.py  test_base.py  test_datasets.py  test_package_metadata.py
_modules/: index.html
_modules/MDAnalysisData/: CG_fiber.html  PEG_1chain.html  adk_equilibrium.html  adk_transitions.html  base.html  ifabp_water.html  membrane_peptide.html  nhaa_equilibrium.html  vesicles.html  yiip_equilibrium.html
_sources/: ifabp_water.rst.txt  nhaa_equilibrium.rst.txt  usage.rst.txt  yiip_equilibrium.rst.txt
_static/: documentation_options.js  opensearch.xml
docs/: CG_fiber.rst  Makefile  PEG_1chain.rst  adk_equilibrium.rst  adk_transitions.rst  conf.py  contributing.rst  credits.rst  helpers.rst  index.rst  install.rst  membrane_peptide.rst  usage.rst  vesicles.rst  yiip_equilibrium.rst
